<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.ContentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MoreInfoFragment"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="top|start"
            android:layout_margin="@dimen/content_margin"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_arrow_back"
            app:srcCompat="@drawable/ic_close_24dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_content_margin"
                android:layout_marginEnd="@dimen/horizontal_content_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/vertical_content_margin"
                        android:text="@string/title_more"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="223dp"
                        android:layout_height="251dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/cd_logo"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_content_margin"
                        android:text="@string/text_developed_by"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_app_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_subtitle_margin"
                        android:layout_marginBottom="@dimen/edit_text_margin"
                        tools:text="@string/text_app_version"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_content_margin"
                        android:layout_marginBottom="@dimen/edit_text_margin"
                        android:text="@string/text_more_info"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/edit_text_margin"
                        android:text="@string/text_or_read"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/textColor"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:id="@+id/ll_check_book_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/edit_text_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_check_book_1"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_check_book_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/edit_text_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_check_book_2"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_content_margin"
                        android:layout_marginBottom="@dimen/edit_text_margin"
                        android:text="@string/text_source_code"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/textColor"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:id="@+id/ll_check_repo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/edit_text_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_check_repo"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_check_web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/edit_text_margin"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="274dp"
                            android:layout_height="wrap_content"
                            android:background="@android:color/holo_blue_dark" />

                        <TextView
                            android:id="@+id/txt_heart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|bottom"
                            android:layout_margin="@dimen/content_margin"
                            android:text="@string/text_love"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/textColor"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.appcompat.widget.ContentFrameLayout>